[gd_scene load_steps=4 format=3 uid="uid://bisvb6ni6hr37"]

[ext_resource type="Script" uid="uid://bdw5w0244hv4a" path="res://scripts/bats/bat.gd" id="1_5y468"]
[ext_resource type="Texture2D" uid="uid://2xd5oitw3ttq" path="res://assets/sprites/baseball bats/slugger-bat-gifts.png" id="2_gb2kl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8mkip"]
size = Vector2(83.228, 15)

[node name="Bat" type="RigidBody2D" groups=["Attacks"]]
collision_layer = 4
mass = 0.94
center_of_mass_mode = 1
center_of_mass = Vector2(7, 0)
script = ExtResource("1_5y468")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2(20.7493, -0.243705)
scale = Vector2(1.12622, 0.915303)
polygon = PackedVector2Array(-25, -4, -24, -4, -22, -3, 3, -3, 17, -5, 28, -5, 30, -2, 30, 2, 28, 5, 17, 5, 3, 3, -22, 3, -24, 5, -25, 5)

[node name="Sprite2D" type="Sprite2D" parent="CollisionShape2D"]
position = Vector2(2, 0)
scale = Vector2(0.0673077, 0.144509)
texture = ExtResource("2_gb2kl")

[node name="SpinTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="GrabArea" type="Area2D" parent="."]
position = Vector2(15, 0)
scale = Vector2(0.783454, 0.697374)
collision_layer = 0
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
position = Vector2(11.386, -0.5)
shape = SubResource("RectangleShape2D_8mkip")
debug_color = Color(0.757736, 0.185178, 1, 0.42)

[node name="GrabTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="SpinTimer" to="." method="_on_spin_timer_timeout"]
[connection signal="body_entered" from="GrabArea" to="." method="_on_grab_area_entered"]
[connection signal="timeout" from="GrabTimer" to="." method="_on_grab_timer_timeout"]
